--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "node src/index.js"
   },
   "dependencies": {
+    "chalk": "5.3.0",
     "commander": "12.1.0"
   },
   "devDependencies": {
