Added node-notifier to send notifications 📢

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "chalk": "5.3.0",
-    "commander": "12.1.0"
+    "commander": "12.1.0",
+    "node-notifier": "10.0.1"
   },
   "devDependencies": {
     "rimraf": "5.0.7",
