--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "scripts": {
-    "build": "rimraf lib && mkdir lib && terser src/index.js -o lib/index.min.js",
+    "build": "rimraf lib && mkdir lib && rollup -c",
     "lint": "node src/index.js"
   },
   "dependencies": {
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "rimraf": "5.0.7",
-    "terser": "5.31.1"
+    "rollup": "4.18.0",
+    "rollup-plugin-terser": "7.0.2"
   },
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
