--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "chalk": "5.3.0",
     "commander": "12.1.0",
     "eslint": "9.4.0",
-    "node-notifier": "10.0.1"
+    "eslint-formatter-pretty": "6.0.1",
+    "node-notifier": "10.0.1",
+    "stylelint": "16.6.1",
+    "stylelint-formatter-pretty": "4.0.0"
   },
   "devDependencies": {
     "rimraf": "5.0.7",
