--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-pilot",
-  "description": "Your co-pilot for maintaining high code quality with seamless ESLint and Stylelint integration.",
+  "description": "Lint Pilot: Your co-pilot for maintaining high code quality with seamless ESLint, Stylelint, and MarkdownLint integration.",
   "repository": {
     "type": "git",
     "url": "https://github.com/01taylop/lint-pilot"
