--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "rimraf lib && mkdir lib && rollup -c",
     "lint": "node src/index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
+    "test": "jest"
   },
   "dependencies": {
     "chalk": "5.3.0",
@@ -32,6 +32,8 @@
     "stylelint-formatter-pretty": "4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.24.6",
+    "@babel/preset-env": "7.24.6",
     "jest": "29.7.0",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
