--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "commander": "12.1.0",
     "eslint": "9.4.0",
     "eslint-formatter-pretty": "6.0.1",
+    "glob": "10.4.1",
     "markdownlint": "0.34.0",
     "node-notifier": "10.0.1",
     "stylelint": "16.6.1",
