--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "rimraf lib && mkdir lib && rollup -c",
-    "lint": "node src/index.js",
+    "lint": "tsx src/index.js",
     "test": "jest"
   },
   "dependencies": {
@@ -35,10 +35,19 @@
   "devDependencies": {
     "@babel/core": "7.24.6",
     "@babel/preset-env": "7.24.6",
+    "@babel/preset-typescript": "7.24.7",
+    "@rollup/plugin-typescript": "11.1.6",
+    "@types/jest": "29.5.12",
+    "@types/node-notifier": "8.0.5",
     "jest": "29.7.0",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "ts-jest": "29.1.4",
+    "ts-node": "10.9.2",
+    "tslib": "2.6.3",
+    "tsx": "4.15.2",
+    "typescript": "5.4.5"
   },
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
