--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=18.18.0"
   },
   "bin": {
-    "lint-pilot": "./lib/index.js"
+    "lint-pilot": "./lib/index.min.js"
   },
   "files": [
     "lib"
