--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/01taylop/lint-pilot"
   },
-  "version": "0.0.1",
+  "version": "0.0.1-beta.1",
   "type": "module",
   "engines": {
     "node": ">=18.18.0"
@@ -25,18 +25,17 @@
     "chalk": "5.3.0",
     "commander": "12.1.0",
     "eslint": "9.4.0",
-    "eslint-formatter-pretty": "6.0.1",
     "glob": "10.4.1",
     "markdownlint": "0.34.0",
     "node-notifier": "10.0.1",
-    "stylelint": "16.6.1",
-    "stylelint-formatter-pretty": "4.0.0"
+    "stylelint": "16.6.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.6",
     "@babel/preset-env": "7.24.6",
     "@babel/preset-typescript": "7.24.7",
     "@rollup/plugin-typescript": "11.1.6",
+    "@types/eslint": "8.56.10",
     "@types/jest": "29.5.12",
     "@types/node-notifier": "8.0.5",
     "jest": "29.7.0",
@@ -53,6 +52,7 @@
   "keywords": [
     "eslint",
     "lint",
+    "markdownlint",
     "stylelint"
   ]
 }
