--- a/package.json
+++ b/package.json
@@ -1,21 +1,59 @@
 {
   "name": "lint-pilot",
-  "description": "Your co-pilot for maintaining high code quality with seamless ESLint and Stylelint integration.",
+  "description": "Lint Pilot: Your co-pilot for maintaining high code quality with seamless ESLint, Stylelint, and MarkdownLint integration.",
   "repository": {
     "type": "git",
     "url": "https://github.com/01taylop/lint-pilot"
   },
-  "version": "0.0.1",
+  "version": "0.0.1-beta.1",
+  "type": "module",
+  "engines": {
+    "node": ">=18.18.0"
+  },
+  "bin": {
+    "lint-pilot": "./lib/index.min.js"
+  },
+  "files": [
+    "lib"
+  ],
   "scripts": {
+    "build": "rimraf lib && mkdir lib && rollup -c",
+    "lint": "tsx src/index.js",
+    "prepublishOnly": "yarn test --coverage && yarn build",
+    "test": "jest"
   },
   "dependencies": {
+    "chalk": "5.3.0",
+    "commander": "12.1.0",
+    "eslint": "9.4.0",
+    "glob": "10.4.1",
+    "markdownlint": "0.34.0",
+    "node-notifier": "10.0.1",
+    "stylelint": "16.6.1"
   },
   "devDependencies": {
+    "@babel/core": "7.24.6",
+    "@babel/preset-env": "7.24.6",
+    "@babel/preset-typescript": "7.24.7",
+    "@rollup/plugin-typescript": "11.1.6",
+    "@types/eslint": "8.56.10",
+    "@types/jest": "29.5.12",
+    "@types/node-notifier": "8.0.5",
+    "jest": "29.7.0",
+    "rimraf": "5.0.7",
+    "rollup": "4.18.0",
+    "rollup-plugin-terser": "7.0.2",
+    "ts-jest": "29.1.4",
+    "ts-node": "10.9.2",
+    "tslib": "2.6.3",
+    "tsx": "4.15.2",
+    "typescript": "5.4.5"
   },
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
     "eslint",
     "lint",
+    "markdownlint",
     "stylelint"
   ]
 }
