Normalise repository URL in package.json 🚁

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Run Tests
       run: yarn test --coverage
 
+    - name: Run Build
+      run: yarn build
+
     - name: Depcheck
       run: npx depcheck
