--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "chalk": "5.3.0",
+    "chokidar": "3.6.0",
     "commander": "12.1.0",
     "eslint": "9.4.0",
     "glob": "10.4.1",
