--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/eslint": "8.56.10",
     "@types/jest": "29.5.12",
     "@types/node-notifier": "8.0.5",
+    "babel-plugin-transform-import-meta": "2.2.1",
     "jest": "29.7.0",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
