--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "rimraf lib && mkdir lib && rollup -c && yarn buildConfig",
     "buildConfig": "tsx ./scripts/build-config.ts",
-    "lint": "tsx src/index.js",
+    "lint": "NODE_ENV=development tsx src/index.js",
     "publishLib": "yarn test --coverage && yarn build && cd lib && npm publish",
     "test": "jest"
   },
@@ -35,10 +35,12 @@
     "@babel/core": "7.24.6",
     "@babel/preset-env": "7.24.6",
     "@babel/preset-typescript": "7.24.7",
+    "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-typescript": "11.1.6",
     "@types/eslint": "8.56.10",
     "@types/jest": "29.5.12",
     "@types/node-notifier": "8.0.5",
+    "babel-plugin-transform-import-meta": "2.2.1",
     "jest": "29.7.0",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
