--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "commander": "12.1.0",
     "eslint": "9.4.0",
     "eslint-plugin-inclusive-language": "2.2.1",
+    "eslint-plugin-sort-destructure-keys": "2.0.0",
     "glob": "10.4.1",
     "markdownlint": "0.34.0",
     "node-notifier": "10.0.1",
@@ -54,6 +55,8 @@
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
     "eslint",
+    "eslint-plugin-inclusive-language",
+    "eslint-plugin-sort-destructure-keys",
     "lint",
     "markdownlint",
     "stylelint"
