--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "9.4.0",
     "eslint-plugin-inclusive-language": "2.2.1",
     "eslint-plugin-sort-destructure-keys": "2.0.0",
+    "eslint-plugin-sort-exports": "0.9.1",
     "glob": "10.4.1",
     "markdownlint": "0.34.0",
     "node-notifier": "10.0.1",
@@ -57,6 +58,7 @@
     "eslint",
     "eslint-plugin-inclusive-language",
     "eslint-plugin-sort-destructure-keys",
+    "eslint-plugin-sort-exports",
     "lint",
     "markdownlint",
     "stylelint"
