--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chokidar": "3.6.0",
     "commander": "12.1.0",
     "eslint": "9.4.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-inclusive-language": "2.2.1",
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-sort-exports": "0.9.1",
@@ -58,6 +59,7 @@
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
     "eslint",
+    "eslint-plugin-eslint-comments",
     "eslint-plugin-inclusive-language",
     "eslint-plugin-sort-destructure-keys",
     "eslint-plugin-sort-exports",
