--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "9.4.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-inclusive-language": "2.2.1",
+    "eslint-plugin-promise": "6.4.0",
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-sort-exports": "0.9.1",
     "glob": "10.4.1",
@@ -61,6 +62,7 @@
     "eslint",
     "eslint-plugin-eslint-comments",
     "eslint-plugin-inclusive-language",
+    "eslint-plugin-promise",
     "eslint-plugin-sort-destructure-keys",
     "eslint-plugin-sort-exports",
     "lint",
