Configured `eslint-plugin-jest` 🃏

--- a/.depcheckrc
+++ b/.depcheckrc
@@ -1,6 +1,7 @@
 ignores: [
   "eslint-plugin-eslint-comments",
   "eslint-plugin-inclusive-language",
+  "eslint-plugin-jest",
   "eslint-plugin-promise",
   "eslint-plugin-sort-destructure-keys",
   "eslint-plugin-sort-exports",
