--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-inclusive-language": "2.2.1",
     "eslint-plugin-jest": "28.6.0",
+    "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-promise": "6.4.0",
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-sort-exports": "0.9.1",
@@ -65,6 +66,7 @@
     "eslint-plugin-eslint-comments",
     "eslint-plugin-inclusive-language",
     "eslint-plugin-jest",
+    "eslint-plugin-jest-formatting",
     "eslint-plugin-promise",
     "eslint-plugin-sort-destructure-keys",
     "eslint-plugin-sort-exports",
