--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "outDir": "./lib",
     "paths": {
-      "@Jest": ["./jest-config/*"],
+      "@Jest/*": ["./jest-config/*"],
       "@Types": ["./src/types/index.ts"],
       "@Utils/*": ["./src/utils/*"],
     },
