--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chalk": "5.3.0",
     "chokidar": "3.6.0",
     "commander": "12.1.0",
-    "eslint": "9.4.0",
+    "eslint": "9.8.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-inclusive-language": "2.2.1",
     "eslint-plugin-jest": "28.6.0",
@@ -44,10 +44,12 @@
     "@babel/core": "7.24.6",
     "@babel/preset-env": "7.24.6",
     "@babel/preset-typescript": "7.24.7",
+    "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-typescript": "11.1.6",
-    "@types/eslint": "8.56.10",
+    "@types/eslint": "9.6.0",
     "@types/jest": "29.5.12",
+    "@types/markdownlint-rule-helpers": "0.21.5",
     "@types/node-notifier": "8.0.5",
     "babel-plugin-transform-import-meta": "2.2.1",
     "jest": "29.7.0",
