--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-inclusive-language": "2.2.1",
     "eslint-plugin-jest": "28.6.0",
     "eslint-plugin-jest-formatting": "3.1.0",
+    "eslint-plugin-n": "17.10.1",
     "eslint-plugin-promise": "6.4.0",
     "eslint-plugin-sort-destructure-keys": "2.0.0",
     "eslint-plugin-sort-exports": "0.9.1",
@@ -69,6 +70,7 @@
     "eslint-plugin-inclusive-language",
     "eslint-plugin-jest",
     "eslint-plugin-jest-formatting",
+    "eslint-plugin-n",
     "eslint-plugin-promise",
     "eslint-plugin-sort-destructure-keys",
     "eslint-plugin-sort-exports",
