--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@stylistic/stylelint-plugin": "3.0.0",
     "chalk": "5.3.0",
     "chokidar": "3.6.0",
     "commander": "12.1.0",
@@ -39,7 +40,12 @@
     "markdownlint-rule-helpers": "0.25.0",
     "node-notifier": "10.0.1",
     "space-log": "1.2.0",
-    "stylelint": "16.6.1"
+    "stylelint": "16.6.1",
+    "stylelint-config-property-sort-order-smacss": "10.0.0",
+    "stylelint-config-standard-scss": "13.1.0",
+    "stylelint-declaration-strict-value": "1.10.6",
+    "stylelint-order": "6.0.4",
+    "stylelint-scss": "6.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.6",
@@ -65,6 +71,7 @@
   },
   "author": "Patrick Taylor <hello@patricktaylor.dev>",
   "keywords": [
+    "@stylistic/stylelint-plugin",
     "eslint",
     "eslint-plugin-eslint-comments",
     "eslint-plugin-inclusive-language",
@@ -76,6 +83,11 @@
     "eslint-plugin-sort-exports",
     "lint",
     "markdownlint",
-    "stylelint"
+    "stylelint",
+    "stylelint-config-property-sort-order-smacss",
+    "stylelint-config-standard-scss",
+    "stylelint-declaration-strict-value",
+    "stylelint-order",
+    "stylelint-scss"
   ]
 }
