Added postcss-scss and postcss-less 🏭

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "markdownlint": "0.34.0",
     "markdownlint-rule-helpers": "0.25.0",
     "node-notifier": "10.0.1",
+    "postcss-less": "6.0.0",
+    "postcss-scss": "4.0.9",
     "space-log": "1.2.0",
     "stylelint": "16.8.1",
     "stylelint-config-property-sort-order-smacss": "10.0.0",
