--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "29.7.0",
     "rimraf": "5.0.10",
     "rollup": "4.21.2",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-terser": "7.0.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
