--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint-pilot": "index.min.js"
   },
   "scripts": {
-    "build": "rimraf lib && mkdir lib && rollup -c && yarn buildConfig",
+    "build": "rimraf lib && mkdir lib && rollup -c",
     "buildConfig": "tsx ./scripts/build-config.ts",
     "lint": "NODE_ENV=development tsx src/index.js --ignore-dirs lib",
     "publishLib": "yarn test --coverage && yarn build && cd lib && npm publish",
