--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "lint-pilot": "index.min.js"
   },
   "scripts": {
-    "build": "rimraf lib && mkdir lib && rollup -c && yarn buildConfig",
-    "buildConfig": "tsx ./scripts/build-config.ts",
-    "lint": "NODE_ENV=development tsx src/index.js --ignore-dirs lib",
+    "build": "rimraf lib && mkdir lib && rollup -c",
+    "lint": "tsx src/index.js --ignore-dirs lib",
     "publishLib": "yarn test --coverage && yarn build && cd lib && npm publish",
     "test": "jest"
   },
@@ -52,7 +51,6 @@
     "@babel/preset-env": "7.25.4",
     "@babel/preset-typescript": "7.24.7",
     "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-typescript": "11.1.6",
     "@types/eslint": "9.6.1",
     "@types/jest": "29.5.12",
@@ -62,6 +60,7 @@
     "jest": "29.7.0",
     "rimraf": "5.0.10",
     "rollup": "4.21.2",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-terser": "7.0.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
