--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "@Types": ["./src/types/index.ts"],
       "@Utils/*": ["./src/utils/*"],
     },
+    "resolveJsonModule": true,
     "rootDir": "./",
     "strict": true,
     "target": "ESNext"
