Added types to the lint options 🆎

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "./lib",
     "paths": {
       "@Jest/*": ["./jest-config/*"],
-      "@Types": ["./src/types/index.ts"],
+      "@Types/*": ["./src/types/*"],
       "@Utils/*": ["./src/utils/*"],
     },
     "resolveJsonModule": true,
