--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,17 @@ node_modules
 .lintpilotcache/
 coverage/
 
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 # misc
 .DS_Store
-.idea
+.idea/
 .iml
 .log
-.vscode
+.vscode/
+
+# yarn
+.yarn/*
+!.yarn/patches/
+!.yarn/plugins/
+!.yarn/releases/
+!.yarn/sdks/
+!.yarn/versions/
