--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "engines": {
     "node": ">=18.18.0"
   },
-  "bin": {
-    "lint-pilot": "index.min.js"
-  },
+  "bin": "index.min.js",
   "scripts": {
     "build": "rimraf lib && mkdir lib && rollup -c",
     "lint": "tsx src/index.js --ignore-dirs lib",
@@ -86,5 +84,6 @@
     "stylelint-declaration-strict-value",
     "stylelint-order",
     "stylelint-scss"
-  ]
+  ],
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
