Use package.json for CLI name, description, and version in Commander 🔖

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@Types/*": ["./src/types/*"],
       "@Utils/*": ["./src/utils/*"],
     },
+    "resolveJsonModule": true,
     "rootDir": "./",
     "strict": true,
     "target": "ESNext"
