--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,5 +51,5 @@ jobs:
     - name: Run lint with legacy ESLint config
       run: yarn lint --eslint-use-legacy-config --ignore-patterns '**/*.ts'
 
-    - name: Depcheck
-      run: npx depcheck
+    - name: Check code quality
+      run: yarn knip
