--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node-notifier": "8.0.5",
     "babel-plugin-transform-import-meta": "2.2.1",
     "jest": "29.7.0",
+    "knip": "5.80.2",
     "rimraf": "5.0.10",
     "rollup": "4.21.2",
     "rollup-plugin-copy": "3.5.0",
