Setup changesets for automated releases 🚢

--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "lint-pilot",
   "description": "Your co-pilot for maintaining high code quality with seamless ESLint, Stylelint, and Markdownlint integration.",
+  "version": "0.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/01taylop/lint-pilot.git"
   },
-  "version": "0.0.1-beta.1",
   "type": "module",
   "engines": {
     "node": ">=18.18.0"
   },
-  "bin": "index.min.js",
+  "bin": "lib/index.min.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "rimraf lib && mkdir lib && rollup -c",
     "lint": "tsx src/index.js --ignore-dirs lib",
-    "publishLib": "yarn test --coverage && yarn build && cd lib && npm publish",
+    "prepublishOnly": "yarn test --coverage && yarn build",
+    "release": "changeset publish",
     "test": "jest"
   },
   "dependencies": {
@@ -47,6 +51,7 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.25.4",
     "@babel/preset-typescript": "7.24.7",
+    "@changesets/cli": "2.29.8",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-typescript": "11.1.6",
