--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "node-notifier": "10.0.1",
     "postcss-less": "6.0.0",
     "postcss-scss": "4.0.9",
-    "space-log": "1.2.0",
+    "space-log": "2.0.0",
     "stylelint": "16.9.0",
     "stylelint-config-property-sort-order-smacss": "10.0.0",
     "stylelint-declaration-strict-value": "1.10.6",
@@ -91,5 +91,6 @@
     "stylelint-order",
     "stylelint-scss"
   ],
+  "license": "MIT",
   "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
