--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "./lib",
+    "moduleResolution": "bundler",
+    "noEmit": true,
     "paths": {
       "@Jest/*": ["./jest-config/*"],
       "@Types": ["./src/types/index.ts"],
@@ -13,13 +13,17 @@
     },
     "resolveJsonModule": true,
     "rootDir": "./",
+    "skipLibCheck": true,
     "strict": true,
-    "target": "ESNext"
+    "target": "ES2022"
   },
   "include": [
-    "config",
-    "jest-config",
-    "src"
+    "config/**/*",
+    "jest-config/**/*",
+    "src/**/*"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "lib/**/*",
+    "node_modules/**/*"
+  ]
 }
