--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": ">=18.18.0"
   },
-  "bin": "lib/index.min.js",
+  "bin": "lib/index.js",
   "files": [
     "lib"
   ],
@@ -53,8 +53,9 @@
     "@babel/preset-typescript": "7.24.7",
     "@changesets/cli": "2.29.8",
     "@rollup/plugin-json": "6.1.0",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-typescript": "11.1.6",
+    "@rollup/plugin-node-resolve": "16.0.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.3.0",
     "@types/eslint": "9.6.1",
     "@types/jest": "29.5.12",
     "@types/markdownlint-rule-helpers": "0.21.5",
@@ -63,9 +64,8 @@
     "jest": "29.7.0",
     "knip": "5.80.2",
     "rimraf": "5.0.10",
-    "rollup": "4.21.2",
+    "rollup": "4.55.1",
     "rollup-plugin-copy": "3.5.0",
-    "rollup-plugin-terser": "7.0.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "tslib": "2.7.0",
