--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": ">=18.18.0"
   },
-  "bin": "lib/index.min.js",
+  "bin": "lib/index.js",
   "files": [
     "lib"
   ],
@@ -40,7 +40,7 @@
     "node-notifier": "10.0.1",
     "postcss-less": "6.0.0",
     "postcss-scss": "4.0.9",
-    "space-log": "1.2.0",
+    "space-log": "2.0.0",
     "stylelint": "16.9.0",
     "stylelint-config-property-sort-order-smacss": "10.0.0",
     "stylelint-declaration-strict-value": "1.10.6",
@@ -53,8 +53,9 @@
     "@babel/preset-typescript": "7.24.7",
     "@changesets/cli": "2.29.8",
     "@rollup/plugin-json": "6.1.0",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-typescript": "11.1.6",
+    "@rollup/plugin-node-resolve": "16.0.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.3.0",
     "@types/eslint": "9.6.1",
     "@types/jest": "29.5.12",
     "@types/markdownlint-rule-helpers": "0.21.5",
@@ -63,9 +64,8 @@
     "jest": "29.7.0",
     "knip": "5.80.2",
     "rimraf": "5.0.10",
-    "rollup": "4.21.2",
+    "rollup": "4.55.1",
     "rollup-plugin-copy": "3.5.0",
-    "rollup-plugin-terser": "7.0.2",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "tslib": "2.7.0",
@@ -91,5 +91,6 @@
     "stylelint-order",
     "stylelint-scss"
   ],
+  "license": "MIT",
   "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
