--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "lint": "tsx src/index.js --ignore-dirs lib",
     "prepublishOnly": "yarn test --coverage && yarn build",
     "release": "changeset publish",
-    "test": "jest"
+    "test": "jest src/"
   },
   "dependencies": {
     "@stylistic/stylelint-plugin": "3.0.1",
-    "chalk": "5.3.0",
+    "chalk": "5.6.2",
     "chokidar": "3.6.0",
     "commander": "12.1.0",
     "eslint": "9.10.0",
@@ -48,25 +48,21 @@
     "stylelint-scss": "6.5.1"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.4",
-    "@babel/preset-typescript": "7.24.7",
     "@changesets/cli": "2.29.8",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.3",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.3.0",
     "@types/eslint": "9.6.1",
-    "@types/jest": "29.5.12",
+    "@types/jest": "30.0.0",
     "@types/markdownlint-rule-helpers": "0.21.5",
     "@types/node-notifier": "8.0.5",
-    "babel-plugin-transform-import-meta": "2.2.1",
-    "jest": "29.7.0",
+    "jest": "30.2.0",
     "knip": "5.80.2",
     "rimraf": "5.0.10",
     "rollup": "4.55.1",
     "rollup-plugin-copy": "3.5.0",
-    "ts-jest": "29.2.5",
+    "ts-jest": "29.4.6",
     "ts-node": "10.9.2",
     "tslib": "2.7.0",
     "tsx": "4.19.0",
