--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-notifier": "10.0.1",
     "postcss-less": "6.0.0",
     "postcss-scss": "4.0.9",
+    "process-supervisor": "1.0.0",
     "space-log": "2.0.0",
     "stylelint": "16.9.0",
     "stylelint-config-property-sort-order-smacss": "10.0.0",
